Overview of changes in Glib <next>
=================================

* Create and register a GType for GConnectFlags

Overview of changes in Glib 1.252
=================================

* Make the recent thread-safety improvements work for non-threaded perls too.

Overview of changes in Glib 1.251
=================================

* Make signal marshalling more thread-safe.  When a signal handler is invoked
  from a foreign thread without associated Perl interpreter, hand the
  marshalling over to the main loop which in turn later wakes up the main
  thread and lets it handle the request.  Since this approach is experimental,
  there is debug print for now whenever it is used:
    *** GPerl asked to invoke callback from a foreign thread;
        handing it over to the main loop

Overview of changes in Glib 1.250
=================================

* Add a fallback implementation of SvMAGIC_set; Bugzilla bug #665266
* Avoid a syntax error on older perls
* Glib::Object: make ref-counting compatible with perl >= 5.16 (RT#73650)
* Fix some typos in POD (RT#73616)

Overview of changes in Glib 1.242
=================================

* Glib::GenPod: fix typo in default pspec values
  (https://bugzilla.gnome.org/show_bug.cgi?id=665331)
* Glib::GenPod: delete a duplicate key in %basic_types
  (https://bugzilla.gnome.org/show_bug.cgi?id=665332)
* Change the FSF's address in all GPL license notices (RT#72664)

Overview of changes in Glib 1.241
=================================

* Register the boxed type Glib::GString, based almost completely on a patch by
  Emmanuel Rodriguez (https://bugzilla.gnome.org/show_bug.cgi?id=663881).
* Fix linking against perl < 5.9.4 on some platforms; Do not use
  SvREFCNT_inc_simple_void_NN as that was introduced in perl 5.9.4, which came
  after the 5.8.0 we require.

Overview of changes in Glib 1.240
=================================

 Since 1.22x (the previous stable series)
 ----------------------------------------